Archive2/53/464db7e2f31cfa/main.cpp
#include <stdio.h>

char *c[] = { "str1", "str2", "str3", "str4" };
char **d = { "str1", "str2", "str3", "str4" };

int main(void) {}
